--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           node-version: "14.x"
           registry-url: https://npm.pkg.github.com/
-          scope: "@mfrener"
+          scope: "@waytrade"
           always-auth: true
 
       # Install packages with yarn
