--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
       context: .
       dockerfile: ./Dockerfile
     environment:
-      TWSUSERID: ${TWS_USERID}
-      TWSPASSWORD: ${TWS_PASSWORD}
+      TWS_USERID: ${TWS_USERID}
+      TWS_PASSWORD: ${TWS_PASSWORD}
       TRADING_MODE: ${TRADING_MODE:-live}
       NODE_ENV: production
     ports:
