Add support for getting FX-spot market data.
Fix account summaries update when PnL changes.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,6 +37,7 @@
     "ETFs",
     "Frener",
     "IBKR",
+    "IDEALPRO",
     "LIBUS",
     "Microservice",
     "Microservices",
@@ -50,6 +51,7 @@
     "bootstrapper",
     "conid",
     "eslintcache",
+    "forex",
     "maint",
     "mfrener",
     "openapi",
