--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,18 +46,13 @@ jobs:
           tag-prefix: ""
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: "Publish to github"
-        run: |
-          npm config set //registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN
-          npm publish --access public
-        env:
-          NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
           
-      - name: "Publish to github"
+      - name: "Publish Package"
         run: |
           npm config set registry https://npm.pkg.github.com
-          npm config set //npm.pkg.github.com//:_authToken=$NPM_AUTH_TOKEN
+          npm config set //registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN
+          npm config set //npm.pkg.github.com//:_authToken=$GITHUB_AUTH_TOKEN
           npm publish
         env:
-          NPM_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+          GITHUB_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
