--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -50,8 +50,9 @@ jobs:
       - name: "Publish Package"
         run: |
           npm config set registry https://npm.pkg.github.com
-          npm config set //registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN
           npm config set //npm.pkg.github.com//:_authToken=$GITHUB_AUTH_TOKEN
+          npm config set //registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN
+          npm publish --access public --@OWNER:registry='https://registry.npmjs.org'
           npm publish
         env:
           NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
