--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,6 +22,7 @@ jobs:
         uses: "actions/setup-node@v2"
         with:
           node-version: "14.x"
+          registry-url: 'https://npm.pkg.github.com'
           scope: "@waytrade"
           always-auth: true
 
@@ -48,7 +49,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: "Publish to github"
-        run: npm publish
+        run: | 
+          npm set //npm.pkg.github.com/:_authToken ${{ secrets.GITHUB_TOKEN }}
+          npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -59,6 +62,8 @@ jobs:
           registry-url: "https://registry.npmjs.org"
 
       - name: "Publish to npmjs"
-        run: npm publish --access public
+        run: |
+          npm set //registry.npmjs.org/:_authToken ${{ secrets.NPM_TOKEN }}
+          npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
