--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,30 +8,29 @@ env:
   IMAGE_NAME: ib-api-service
 
 jobs:
-  publish-package:
-    name: "Publish Package"
+  test:
+    name: "Tests and Validation"
     runs-on: ubuntu-latest
-
     steps:
       - name: "Checkout source code"
-        uses: "actions/checkout@v2"
+        uses: actions/checkout@v2
         with:
           ref: ${{ github.ref }}
-
+          
       - name: "Setup Node.js"
-        uses: "actions/setup-node@v2"
+        uses: actions/setup-node@v2
         with:
           node-version: "14.x"
           registry-url: 'https://npm.pkg.github.com'
           scope: "@waytrade"
           always-auth: true
-
+          
       - name: "Install OpenAPI Tools"
         run: npm install --global @openapitools/openapi-generator-cli
 
       - name: "Install Dependencies"
         run: yarn install
-
+        
       - name: "Build Code"
         run: yarn build
 
@@ -40,7 +39,7 @@ jobs:
 
       - name: "Validate API"
         run: yarn validate-openapi
-
+        
       - name: "Automated Version Bump"
         uses: "phips28/gh-action-bump-version@master"
         with:
@@ -48,23 +47,32 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: "Publish to github"
-        run: | 
-          npm set //npm.pkg.github.com/:_authToken ${{ secrets.GITHUB_TOKEN }}
-          npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: "Setup npmjs registry"
-        uses: actions/setup-node@v1
+  publish-npm:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
         with:
           node-version: "14.x"
-          registry-url: "https://registry.npmjs.org"
-          always-auth: true
-
-      - name: "Publish to npmjs"
-        run: |
-          npm set //registry.npmjs.org/:_authToken ${{ secrets.NPM_TOKEN }}
-          npm publish --access public
+          registry-url: https://registry.npmjs.org/
+      - run: npm yarn build
+      - run: npm publish --access public
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
+
+  publish-gpr:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-node@v1
+        with:
+          node-version: "14.x"
+          registry-url: https://npm.pkg.github.com/
+          scope: '@waytrade'
+      - run: npm yarn build
+      - run: echo registry=https://npm.pkg.github.com/waytrade >> .npmrc
+      - run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.PUBLISH_GITHUB_TOKEN}}
