Also publish dist/ folder

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "url": "https://github.com/waytrade/ib-api-service.git"
   },
   "files": [
+    "dist/",
     "openapi.json"
   ],
   "scripts": {
