cache contract details

--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
   },
   "dependencies": {
     "@stoqey/ib": "^1.1.42",
-    "@waytrade/microservice-core": "^0.1.22",
+    "@types/lru-cache": "^5.1.0",
+    "@waytrade/microservice-core": "^0.1.29",
+    "lru-cache": "^6.0.0",
     "rxjs": "^6.6.7"
   },
   "devDependencies": {
