--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - "master"
+env:
+  IMAGE_NAME: ib-api-service
 
 jobs:
   test:
@@ -14,19 +16,19 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: ${{ github.ref }}
-          
+
       - name: "Setup Node.js"
         uses: actions/setup-node@v2
         with:
           node-version: "14.x"
           registry-url: https://registry.npmjs.org/
-          
+
       - name: "Install OpenAPI Tools"
         run: npm install --global @openapitools/openapi-generator-cli
 
       - name: "Install Dependencies"
         run: yarn install
-        
+
       - name: "Build Code"
         run: yarn build
 
@@ -35,21 +37,21 @@ jobs:
 
       - name: "Validate API"
         run: yarn validate-openapi
-        
+
       - name: "Automated Version Bump"
         uses: "phips28/gh-action-bump-version@master"
         with:
           tag-prefix: ""
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          
+
       - name: "Publish to npmjs"
         run: |
           npm config set //registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
           npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
-          
+
       - name: "Setup github environment"
         uses: "actions/setup-node@v2"
         with:
@@ -57,7 +59,7 @@ jobs:
           registry-url: https://npm.pkg.github.com/
           scope: "@waytrade"
           always-auth: true
-          
+
       - name: "Publish to github"
         run: |
           echo registry=https://npm.pkg.github.com/waytrade >> .npmrc
@@ -65,4 +67,51 @@ jobs:
           npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-   
+
+publish-docker:
+  name: Publish Docker Image
+  needs: publish-package
+  runs-on: ubuntu-latest
+
+  steps:
+    - name: Checkout source code
+      uses: actions/checkout@v2
+      with:
+        ref: ${{ github.ref }}
+
+    - name: Prepare .npmrc
+      uses: "actions/setup-node@v2"
+      with:
+        node-version: "14.x"
+        registry-url: https://npm.pkg.github.com/
+        scope: "@waytrade"
+        always-auth: true
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Prepare .npmrc
+      run: echo //npm.pkg.github.com/:_authToken=$GITHUB_TOKEN >> .npmrc
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Build image
+      run: docker build . --file Dockerfile --tag $IMAGE_NAME
+
+    - name: Log into registry
+      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
+
+    - name: Push image
+      run: |
+        IMAGE_ID=docker.pkg.github.com/${{ github.repository }}/$IMAGE_NAME
+        # Change all uppercase to lowercase
+        IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
+        # Strip git ref prefix from version
+        VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
+        # Strip "v" prefix from tag name
+        [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
+        # Use Docker `latest` tag convention
+        [ "$VERSION" == "master" ] && VERSION=latest
+        echo IMAGE_ID=$IMAGE_ID
+        echo VERSION=$VERSION
+        docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
+        docker push $IMAGE_ID:$VERSION
