Add x11vnc to docker

--- a/docker/config/ibc/config.ini
+++ b/docker/config/ibc/config.ini
@@ -214,7 +214,7 @@ MinimizeMainWindow=no
 #
 # The default is 'manual'.
 
-ExistingSessionDetectedAction=primaryoverride
+ExistingSessionDetectedAction=primary
 
 
 # If set to 'accept', IBC automatically accepts incoming
@@ -227,7 +227,7 @@ ExistingSessionDetectedAction=primaryoverride
 # configuration page, as this is much more secure (in this case, no
 # incoming API connection dialogs will occur for those IP addresses).
 
-AcceptIncomingConnectionAction=accept
+AcceptIncomingConnectionAction=reject
 
 
 # NB: ShowAllTrades is deprecated starting with TWS 955. This is
@@ -522,4 +522,4 @@ SuppressInfoMessages=yes
 # unless there is a specific reason that this information is
 # needed.
 
-LogComponents=never
+LogComponents=yes
