--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,7 +46,7 @@ jobs:
         run: yarn build
 
       - name: "Run Tests"
-        run: yarn test
+        run: yarn test:ci
 
       - name: "Run validate OpenAPI"
         run: yarn validate-openapi
@@ -72,7 +72,6 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./test-report
-          exclude_assets: "coverage/lcov.info,coverage/lcov-report/*"
 
       - name: "Upload Build Artifact"
         uses: actions/upload-artifact@v2
