--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "build:watch": "tsc --watch",
     "lint": "yarn eslint",
     "lint:fix": "yarn eslint:fix",
-    "test": "jest --reporters=default --useStderr --detectOpenHandles --verbose",
+    "jest": "rm -rf test-report && jest --maxConcurrency=1 --reporters=default --useStderr --detectOpenHandles --runInBand --verbose --coverage --no-cache",
+    "jest:ci": "rm -rf test-report && jest --maxConcurrency=1 --reporters=default --useStderr --forceExit --runInBand --verbose --coverage --no-cache",
+    "create-lcov-badge": "lcov-badge2 -o ./test-report/coverage/coverage.svg -l \"Code Coverage\" ./test-report/coverage/lcov.info",
+    "test": "yarn jest && yarn create-lcov-badge",
+    "test:ci": "yarn jest:ci && yarn create-lcov-badge",
     "eslint": "eslint --report-unused-disable-directives .",
     "eslint:fix": "yarn eslint --fix",
     "start": "node ./dist/run.js",
@@ -33,9 +37,16 @@
   },
   "dependencies": {
     "@stoqey/ib": "^1.2.14",
+    "@types/bcrypt": "^5.0.0",
+    "@types/cookie": "^0.4.1",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/lru-cache": "^5.1.0",
     "@types/pino": "^6.3.12",
     "@waytrade/microservice-core": "^0.9.77",
+    "bcrypt": "^5.0.1",
+    "cookie": "^0.4.1",
+    "jest-html-reporter": "^3.4.1",
+    "jsonwebtoken": "^8.5.1",
     "lru-cache": "^6.0.0",
     "rxjs": "^7.3.1"
   },
@@ -51,6 +62,7 @@
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.20",
     "ts-jest": "^27.0.7",
-    "typescript": "~4.3.5"
+    "typescript": "~4.3.5",
+    "lcov-badge2": "^1.0.2"
   }
 }
