--- a/package.json
+++ b/package.json
@@ -42,13 +42,14 @@
     "@types/jsonwebtoken": "^8.5.5",
     "@types/lru-cache": "^5.1.0",
     "@types/pino": "^6.3.12",
-    "@waytrade/microservice-core": "^0.9.77",
-    "bcrypt": "^5.0.1",
+    "@types/ws": "^8.2.0",
+    "@waytrade/microservice-core": "^0.9.78",
     "cookie": "^0.4.1",
     "jsonwebtoken": "^8.5.1",
     "lru-cache": "^6.0.0",
     "prettier": "^2.4.1",
-    "rxjs": "^7.3.1"
+    "rxjs": "^7.3.1",
+    "ws": "^8.2.3"
   },
   "devDependencies": {
     "@types/jest": "^27.0.2",
