Work on Account and Contracts controller

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,6 +30,7 @@
         "--verbose",
         "--maxConcurrency=1",
         "--no-cache",
+        "--detectOpenHandles",
         "-i"
       ],
       "console": "internalConsole",
