--- a/package.json
+++ b/package.json
@@ -33,38 +33,35 @@
     "docker:up": "docker-compose up"
   },
   "engines": {
-    "node": ">=14.15.4"
+    "node": ">=16.13.0"
   },
   "dependencies": {
+    "@waytrade/microservice-core": "^0.9.84",
     "@stoqey/ib": "^1.2.17",
-    "@types/bcrypt": "^5.0.0",
-    "@types/cookie": "^0.4.1",
-    "@types/jsonwebtoken": "^8.5.5",
-    "@types/lru-cache": "^5.1.0",
-    "@types/pino": "^6.3.12",
-    "@types/ws": "^8.2.0",
-    "@waytrade/microservice-core": "^0.9.80",
     "cookie": "^0.4.1",
     "jsonwebtoken": "^8.5.1",
     "lru-cache": "^6.0.0",
-    "prettier": "^2.4.1",
-    "rxjs": "^7.3.0",
-    "ws": "^8.2.3"
+    "rxjs": "^7.4.0",
+    "ws": "^8.3.0"
   },
   "devDependencies": {
-    "@types/jest": "^27.0.2",
+    "@types/cookie": "^0.4.1",
+    "@types/jest": "^27.0.3",
     "@types/node": "^14.15.4",
-    "@typescript-eslint/eslint-plugin": "^5.3.0",
-    "@typescript-eslint/parser": "^5.3.0",
-    "eslint": "^8.2.0",
-    "eslint-plugin-rxjs": "^4.0.1",
-    "jest": "^27.3.1",
-    "jest-html-reporter": "^3.4.1",
+    "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "@typescript-eslint/parser": "^5.6.0",
+    "@types/jsonwebtoken": "^8.5.6",
+    "@types/lru-cache": "^5.1.1",
+    "@types/bcrypt": "^5.0.0",
+    "@types/ws": "^8.2.0",
+    "eslint": "^8.4.1",
+    "eslint-plugin-rxjs": "^4.0.3",
+    "jest": "^27.4.3",
+    "jest-html-reporter": "^3.4.2",
     "jest-junit": "^13.0.0",
     "lcov-badge2": "^1.0.2",
-    "reflect-metadata": "^0.1.13",
-    "source-map-support": "^0.5.20",
-    "ts-jest": "^27.0.7",
-    "typescript": "~4.3.5"
+    "source-map-support": "^0.5.21",
+    "ts-jest": "^27.1.1",
+    "typescript": "4.5.3"
   }
 }
